--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "this-or-that",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
